tests/macros/plugin/transform_async.rs
fn main() {
    let q = inquisition::questions![Plugin { async transform: todo!() }];
}
